src/Test/Fixtures/Good/Types/extraWhitespaceBoolRepeatArrayTypeDeclaration.lf
let   flags   :   [ bool ; 3 ]   =   [ true ; 3 ] ;