src/Test/Fixtures/Bad/Arrays/nonNumericRepeatCountInArrayDeclaration.lf
let flags: [bool; 3] = [true; count];